--- a/Data/settings/2048Settings.ini
+++ b/Data/settings/2048Settings.ini
@@ -1,5 +1,5 @@
 [2048Settings]
 LastDrive=C:
-LastDirectory=\அறி\Games\2048
+LastDirectory=\அறி\Apps\விளையாட்டுகள்\
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=C:\அறி
+PAL:LastPortableAppsBaseDir=C:\அறி\Apps
